# richard

./: .gitignore  output.txt
richard-api/: README.md  pyproject.toml  test_delete_account.py  test_delete_curl.sh  test_me_curl.sh  test_me_endpoint.py
richard-api/alembic/: env.py
richard-api/alembic/versions/: 084f1dbc3c8c_add_podcast_model.py  2c98295ae374_resource_count.py  56734586a5d7_image_table.py  75c759c93f67_more_resource_states.py  7637c06093bd_nullable_podcast_audio_url.py  7d33da9a52df_add_podcast_transcript.py  8278d03bab8d_.py  84bfd29d90c9_nullable_podcast_audio_url.py  89ec8c001e35_profile_pic.py  8c77a84515a5_user_names.py  8d1e04d2916f_users.py  9fe03ecf867f_resource_emoji.py  b60bfe7d04e4_resources.py  d17bc6bcb647_.py  d63b2fd6c38d_more_resource_states.py  f3c6ea518df1_add_image_objects.py  ff4df1430abc_more_resource_states.py
richard-api/app/: auth_dependencies.py  database.py  main.py  settings.py
richard-api/app/learning/: learning_service.py  models.py  routes.py
richard-api/app/learning/background_tasks/: flash_card_generation.py  podcast_generation.py  quiz_generation.py
richard-api/app/learning/background_tasks/resource_processing/: resource_ingestion.py  resource_summary.py  resource_transcription.py
richard-api/app/users/: models.py
richard-api/app/users/routes/: auth_routes.py  user_routes.py
richard-api/app/users/services/: auth_service.py
